--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "homepage": "https://github.com/strnadj/rmtracker#readme",
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-transform-remove-console": "^6.8.0",
+    "babel-plugin-transform-remove-debugger": "^6.8.0",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
@@ -22,11 +25,11 @@
     "babel-preset-stage-0": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
-    "electron-connect": "^0.3.7",
-    "electron-prebuilt": "^1.2.3",
-    "electron-packager": "^7.0.2",
     "devtron": "^1.2.0",
+    "electron-connect": "^0.3.7",
     "electron-devtools-installer": "^1.1.2",
+    "electron-packager": "^7.0.2",
+    "electron-prebuilt": "^1.2.3",
     "eslint": "^2.2.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-config-standard-jsx": "^1.1.1",
