--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/strnadj/rmtracker#readme",
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-eslint": "6.1.2",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-transform-remove-console": "^6.8.0",
     "babel-plugin-transform-remove-debugger": "^6.8.0",
@@ -30,18 +31,19 @@
     "electron-devtools-installer": "^1.1.2",
     "electron-packager": "^7.0.2",
     "electron-prebuilt": "^1.2.3",
-    "eslint": "^2.2.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-config-standard-jsx": "^1.1.1",
-    "eslint-plugin-promise": "^1.0.8",
-    "eslint-plugin-react": "^4.0.0",
-    "eslint-plugin-standard": "^1.3.2",
+    "eslint": "3.5.0",
+    "eslint-config-airbnb": "11.1.0",
+    "eslint-plugin-import": "1.14.0",
+    "eslint-plugin-jsx-a11y": "2.2.2",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-react": "6.2.0",
+    "eslint-plugin-standard": "^2.0.0",
     "event-stream": "^3.3.2",
     "glob": "^7.0.0",
     "gulp": "^3.9.1",
     "gulp-atom-electron": "^1.4.0",
     "gulp-babel": "^6.1.2",
-    "gulp-eslint": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.2.0",
@@ -53,6 +55,8 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "electron": "^1.4.0",
+    "immutable": "^3.8.1",
     "react": "^15.1.0",
     "react-desktop": "^0.2.3",
     "react-dom": "^15.1.0",
@@ -60,8 +64,9 @@
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
+    "redux-immutable": "^3.0.8",
     "redux-thunk": "^2.1.0",
-    "request": "^2.69.0",
+    "request": "^2.75.0",
     "source-map-support": "^0.4.0"
   }
 }
