--- a/package.json
+++ b/package.json
@@ -88,7 +88,6 @@
     "eslint-plugin-react": "^6.3.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "fbjs-scripts": "^0.7.1",
     "file-loader": "^0.9.0",
     "jsdom": "^9.6.0",
     "json-loader": "^0.5.4",
@@ -107,7 +106,11 @@
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1",
-    "webpack-validator": "^2.2.9"
+    "webpack-validator": "^2.2.9",
+    "fbjs-scripts": "^0.7.1",
+    "babel-eslint": "^6.1.2",
+    "eslint": "^3.5.0",
+    "eslint-plugin-react": "^6.2.1"
   },
   "dependencies": {
     "classnames": "^2.2.5",
@@ -117,10 +120,10 @@
     "font-awesome": "^4.6.3",
     "immutable": "^3.8.1",
     "postcss": "^5.2.4",
-    "react": "^15.3.2",
+    "react": "^15.4.1",
     "react-desktop": "^0.2.14",
-    "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "react-select": "^1.0.0-rc.2",
